# Ultimate-RAG-Bootcamp-Using-Langchain-LangGraph-Langsmith

./: .gitignore  README.md  Section 1 - Intro.txt  Section 4 - Anaconda Installation And VS Code Installation.txt  main.py  notes.md  pyproject.toml  requirements.txt
Section 1 - Intro/: README.md  notes.md
Section 2 - Introduction to RAG/: README.md  notes.md
Section 3 - Core Components in RAG/: README.md  notes.md
Section 4 - Anaconda Installation And VS Code Installation/: README.md  notes.md
Section 5 - Data Ingestion and Data Parsing Techniques/: README.md  notes.md
Section 5 - Data Ingestion and Data Parsing Techniques/0-DataIngestParsing/: 3-dataparsingdoc.ipynb
Section 5 - Data Ingestion and Data Parsing Techniques/0-DataIngestParsing/data/databases/: company.db
Section 5 - Data Ingestion and Data Parsing Techniques/0-DataIngestParsing/data/structured_files/: inventory.xlsx
Section 5/0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb
Section 6/: openaiembeddings.ipynb
Section 6 - Vector Embedding and vector Data Bases/: README.md  embedding.ipynb  notes.md
Section 7 - Vector Stores and Vector Data Bases/: PineconeVectorDB.ipynb  README.md  notes.md
Section 8 - Advanced Chunking and preprocessing Techniques/: 1-semantichunking.ipynb
