[project]
name = "ultimate-rag-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfminer>=20191125",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.15",
    "wikipedia>=1.4.0",
]
